--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b9b5ed8ed9.js" crossorigin="anonymous"></script>
 </head>
+
+
+
+
 <body>
-    
+
+    <header>
+        <nav class="flex ">
+            <div class="title-area flex alc">
+
+                <div class="logo">
+                    <img src="assets/logo.png" alt="">
+                </div>
+                <div class="title">
+                    <h1>Kindergarten</h1>
+                </div>
+
+            </div>
+
+            <div class="menu-list">
+                <ul class="flex">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Facilities</a></li>
+                    <li><a href="#">Admission</a></li>
+                </ul>
+            </div>
+            <div class="contact-button">
+                <button><a href="#">Contact</a> </button>
+            </div>
+            <div class="menu-icon hide">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
+
+
 </body>
+
+
+
+
 </html>
