--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <header>
-        <nav class="flex ">
+        <nav class="flex">
             <div class="title-area flex alc">
 
                 <div class="logo">
@@ -47,6 +47,28 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
+        <hr class="hide">
+
+        <section class="hero-section flex alc spb">
+
+            <div class="hero-content flex fdc">
+                <h1>
+                    <span id="yellow">Empowering</span> <br>
+                    students from small <br> age
+                    <span id="aqua">towards vision</span>
+                </h1>
+                <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a
+                    Diverse and Dynamic World.
+                </p>
+                <div class="endroll-button">
+                    <button><a href="#">Endroll Now</a> </button>
+                </div>
+            </div>
+            <div class="hero-photo">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
+
+        </section>
 
     </header>
 
