--- a/index.html
+++ b/index.html
@@ -187,7 +187,36 @@
 
     </main>
 
-    <footer>
+    <footer >
+
+        <div class="left-content">
+            <div class="brand flex">
+                <img src="assets/footer_logo.png" alt="">
+                <h2>Kids <br> Education</h2>
+            </div>
+            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
+                Mayo rib sauce Hawaiian meatball.</p>
+        </div>
+        <div class="center-content">
+            <h2>About School</h2>
+
+            <ul class="flex">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Facilities</a></li>
+                <li><a href="#">Admission</a></li>
+            </ul>
+
+        </div>
+        <div class="right-content">
+            <h2>Keep In Touch</h2>
+            <div class="social-media">
+                <img src="assets/fb.png" alt="">
+                <img src="assets/dribble.png" alt="">
+                <img src="assets/twitter.png" alt="">
+                <img src="assets/google+.png" alt="">
+            </div>
+        </div>
 
     </footer>
 
