Hover Effect Apply Done all Website

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                     <li><a href="#">Admission</a></li>
                 </ul>
             </div>
-            <div class="contact-button">
-                <button><a href="#">Contact</a> </button>
+            <div class="contact-button ">
+                <button class="btn-hover"><a href="#">Contact</a> </button>
             </div>
             <div class="menu-icon hide">
                 <i class="fa-solid fa-bars"></i>
@@ -61,7 +61,7 @@
                     Diverse and Dynamic World.
                 </p>
                 <div class="endroll-button">
-                    <button><a href="#">Endroll Now</a> </button>
+                    <button class="btn-hover"><a href="#">Endroll Now</a> </button>
                 </div>
             </div>
             <div class="hero-photo">
@@ -76,7 +76,7 @@
 
         <section class="curriculam-section">
 
-            <h2>Standard Curriculum</h2>
+            <h2 >Standard Curriculum</h2>
 
             <div class="card-section flex">
                 <div class="card c-1">
@@ -114,8 +114,8 @@
             </div>
 
             <div class="next">
-                <i class="fa-solid fa-arrow-left"></i>
-                <i class="fa-solid fa-arrow-right"></i>
+                <i class="fa-solid fa-arrow-left arrow"></i>
+                <i class="fa-solid fa-arrow-right arrow"></i>
             </div>
 
 
@@ -133,7 +133,7 @@
                 <div class="left-side">
 
                     <div class="big-card">
-                        <img src="assets/story-1.png" alt="">
+                        <img src="assets/left-cover.png" alt="" >
                         <button> November19, 2019</button>
                         <h3>A fun toddler coloring training on classroom</h3>
                         <p>Beautiful branding for changes by Never Now in Australia.
@@ -147,32 +147,48 @@
                 <div class="right-side">
 
                     <div class="small-card sm-1">
-                        <img src="assets/story-2.png" alt="">
-                        <button> December12, 2020</button>
+                        <img src="assets/kids (10).jpg" alt="" >
+                        <button> October 5, 2020</button>
                         <h3>Find out if a school fits the family’s needs</h3>
 
                     </div>
 
 
                     <div class="small-card sm-2">
-                        <img src="assets/story-3.png" alt="">
-                        <button> December12, 2020</button>
+                        <img src="assets/kids (5).jpg" alt="">
+                        <button> May 1, 2021</button>
                         <h3>Summer math & literacy centres for kids</h3>
 
                     </div>
 
 
                     <div class="small-card sm-3">
-                        <img src="assets/story-4.png" alt="">
-                        <button> December12, 2020</button>
+                        <img src="assets/kids (11).jpg" alt="">
+                        <button> December 09, 2020</button>
                         <h3>Classroom management techniques for new tutors</h3>
 
                     </div>
 
 
                     <div class="small-card sm-4">
-                        <img src="assets/story-5.png" alt="">
-                        <button> December12, 2020</button>
+                        <img src="assets/kids (2).jpg" alt="">
+                        <button> August 05, 2024</button>
+                        <h3>Conversation rhymes improve kids listening</h3>
+
+                    </div>
+
+
+                    <div class="small-card sm-4 invisivle">
+                        <img src="assets/kids (9).jpg" alt="">
+                        <button> April 16, 2023</button>
+                        <h3>Conversation rhymes improve kids listening</h3>
+
+                    </div>
+
+
+                    <div class="small-card sm-4 invisivle">
+                        <img src="assets/story-3.png" alt="">
+                        <button> January 05, 2024</button>
                         <h3>Conversation rhymes improve kids listening</h3>
 
                     </div>
@@ -182,6 +198,8 @@
                 </div>
 
             </div>
+
+            <button class="view-button btn-hover">View All</button>
 
         </section>
 
@@ -211,10 +229,10 @@
         <div class="right-content">
             <h2>Keep In Touch</h2>
             <div class="social-media">
-                <img src="assets/fb.png" alt="">
-                <img src="assets/dribble.png" alt="">
-                <img src="assets/twitter.png" alt="">
-                <img src="assets/google+.png" alt="">
+                <img src="assets/fb.png" alt="" title="Facebook">
+                <img src="assets/dribble.png" alt="" title="Dribble">
+                <img src="assets/twitter.png" alt="" title="twitter">
+                <img src="assets/google+.png" alt="" title="google">
             </div>
         </div>
 
