mening Full Text Added and icon Change

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="title-area flex alc">
 
                 <div class="logo">
-                    <img src="assets/logo.png" alt="">
+                    <img src="assets/new_logo.png" alt="">
                 </div>
                 <div class="title">
                     <h1>Kindergarten</h1>
@@ -83,8 +83,7 @@
 
                     <img src="assets/kinder.png" alt="">
                     <h3>Kinder (3-6) Years</h3>
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis
-                        parturient</p>
+                    <p>Your child will be introduced to a broad range of concepts and activities in individual and small group lessons. </p>
                     <button style="color: rgb(100, 200, 255);">Read More</button>
 
                 </div>
@@ -93,8 +92,7 @@
 
                     <img src="assets/elementary.png" alt="">
                     <h3>Elementary Schools</h3>
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis
-                        parturient</p>
+                    <p>a school that provides the first part of a child's education, usually for children between five and eleven years old.</p>
                     <button style="color: rgb(240, 170, 0);">Read More</button>
 
                 </div>
@@ -103,8 +101,7 @@
 
                     <img src="assets/middle.png" alt="">
                     <h3>Middle (10-16) Years</h3>
-                    <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mu sdis
-                        parturient</p>
+                    <p>depending on the school system.the first stage of formal education, and is also known as primary education. </p>
                     <button style="color: rgb(135, 0, 255);">Read More</button>
 
                 </div>
@@ -181,7 +178,7 @@
                     <div class="small-card sm-4 invisivle">
                         <img src="assets/kids (9).jpg" alt="">
                         <button> April 16, 2023</button>
-                        <h3>Conversation rhymes improve kids listening</h3>
+                        <h3>Room Decoration is A Good Art of Kids</h3>
 
                     </div>
 
@@ -189,7 +186,7 @@
                     <div class="small-card sm-4 invisivle">
                         <img src="assets/story-3.png" alt="">
                         <button> January 05, 2024</button>
-                        <h3>Conversation rhymes improve kids listening</h3>
+                        <h3>Small Kids are happy they listining a song</h3>
 
                     </div>
 
@@ -209,7 +206,7 @@
 
         <div class="left-content">
             <div class="brand flex">
-                <img src="assets/footer_logo.png" alt="">
+                <img src="assets/new_logo.png" alt="">
                 <h2>Kids <br> Education</h2>
             </div>
             <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
