dummy text remove and meningfull text add

--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
                 <img src="assets/new_logo.png" alt="">
                 <h2>Kids <br> Education</h2>
             </div>
-            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
-                Mayo rib sauce Hawaiian meatball.</p>
+            <p>Kids' education is the cornerstone of their growth, helping them develop essential skills, creativity, and curiosity from an early age.</p>
         </div>
         <div class="center-content">
             <h2>About School</h2>
