All Device Full Responsive Complete

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 </div>
 
-                <div class="card c-3">
+                <div class="card c-3 card.full-width ">
 
                     <img src="assets/middle.png" alt="">
                     <h3>Middle (10-16) Years</h3>
