Marquee Text Added and Finally All Device Responsive Complete

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
+
+        <div class="scrolling">
+            <p>Latest Update :</p>
+            <marquee>Kindergarten education is a program for young children that helps them develop basic skills and social skills. It can also help children become more independent and confident.</marquee>
+
+        </div>
         <hr class="hide">
 
         <section class="hero-section flex alc spb">
@@ -76,14 +82,15 @@
 
         <section class="curriculam-section">
 
-            <h2 >Standard Curriculum</h2>
+            <h2>Standard Curriculum</h2>
 
             <div class="card-section flex">
                 <div class="card c-1">
 
                     <img src="assets/kinder.png" alt="">
                     <h3>Kinder (3-6) Years</h3>
-                    <p>Your child will be introduced to a broad range of concepts and activities in individual and small group lessons. </p>
+                    <p>Your child will be introduced to a broad range of concepts and activities in individual and small
+                        group lessons. </p>
                     <button style="color: rgb(100, 200, 255);">Read More</button>
 
                 </div>
@@ -92,7 +99,8 @@
 
                     <img src="assets/elementary.png" alt="">
                     <h3>Elementary Schools</h3>
-                    <p>a school that provides the first part of a child's education, usually for children between five and eleven years old.</p>
+                    <p>a school that provides the first part of a child's education, usually for children between five
+                        and eleven years old.</p>
                     <button style="color: rgb(240, 170, 0);">Read More</button>
 
                 </div>
@@ -101,7 +109,8 @@
 
                     <img src="assets/middle.png" alt="">
                     <h3>Middle (10-16) Years</h3>
-                    <p>depending on the school system.the first stage of formal education, and is also known as primary education. </p>
+                    <p>depending on the school system.the first stage of formal education, and is also known as primary
+                        education. </p>
                     <button style="color: rgb(135, 0, 255);">Read More</button>
 
                 </div>
@@ -130,7 +139,7 @@
                 <div class="left-side">
 
                     <div class="big-card">
-                        <img src="assets/left-cover.png" alt="" >
+                        <img src="assets/left-cover.png" alt="">
                         <button> November19, 2019</button>
                         <h3>A fun toddler coloring training on classroom</h3>
                         <p>Beautiful branding for changes by Never Now in Australia.
@@ -144,7 +153,7 @@
                 <div class="right-side">
 
                     <div class="small-card sm-1">
-                        <img src="assets/kids (10).jpg" alt="" >
+                        <img src="assets/kids (10).jpg" alt="">
                         <button> October 5, 2020</button>
                         <h3>Find out if a school fits the family’s needs</h3>
 
@@ -202,14 +211,15 @@
 
     </main>
 
-    <footer >
+    <footer>
 
         <div class="left-content">
             <div class="brand flex">
                 <img src="assets/new_logo.png" alt="">
                 <h2>Kids <br> Education</h2>
             </div>
-            <p>Kids' education is the cornerstone of their growth, helping them develop essential skills, creativity, and curiosity from an early age.</p>
+            <p>Kids' education is the cornerstone of their growth, helping them develop essential skills, creativity,
+                and curiosity from an early age.</p>
         </div>
         <div class="center-content">
             <h2>About School</h2>
